--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">BarrelRace</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="game_over">Game Over</string>
+    <string name="try_again">Try Again</string>
+    <string name="home">Home</string>
+    <string name="play">Play</string>
+    <string name="view_scores">View Scores</string>
+    <string name="settings">Settings</string>
 
 </resources>
