--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">BarrelRace</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="start_time">00:00:00</string>
     <string name="game_over">Game Over</string>
     <string name="try_again">Try Again</string>
     <string name="home">Home</string>
