--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="start_time">00:00:00</string>
     <string name="game_over">Game Over</string>
+    <string name="game_complete">Bravo! You have successfully completed the game</string>
     <string name="try_again">Try Again</string>
     <string name="home">Home</string>
     <string name="play">Play</string>
