--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="play">Play</string>
     <string name="view_scores">View Scores</string>
     <string name="settings">Settings</string>
+    <string name="high_scores">High Scores</string>
+    <string name="no_scores">No Scores</string>
 
 </resources>
