--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,13 @@
     <string name="settings">Settings</string>
     <string name="high_scores">High Scores</string>
     <string name="no_scores">No Scores</string>
+    <string name="difficulty_level">Difficulty Level</string>
+    <string name="easy">Easy</string>
+    <string name="normal">Normal</string>
+    <string name="hard">Hard</string>
+    <string name="sound">Sound</string>
+    <string name="on">On</string>
+    <string name="off">Off</string>
+    <string name="save_changes">Save Changes</string>
 
 </resources>
